# nur-update

./: .gitignore  .mergify.yml  .travis.yml  Procfile  README.md  default.nix  flake.nix  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
nur_update/: __init__.py
