[project]
name = "nur-update"
version = "1.0.0"
authors = [
    {name = "Jörg Thalheim", email = "joerg@thalheim.io"}
]
description = "Triggers NUR updates"
dependencies = [
    "flask",
    "gunicorn",
    "PyGithub",
]

[project.scripts]
nur-update-server = "nur_update:main"

[project.urls]
Homepage = "https://github.com/nix-community/nur-update"
Repository = "https://github.com/nix-community/nur-update.git"

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "C901",
    "E",
    "F",
    "W",
]
ignore = [
    "E501",
    "E741",
]
